# backend_assignment

./: .dockerignore  .env  CONTRIBUTIONS.md  Cargo.toml  Dockerfile  Readme.md  build.rs  docker-compose.yml
migrations/2022-08-22-220737_create_customers/: down.sql  up.sql
migrations/2022-08-22-220755_create_orders/: down.sql  up.sql
migrations/2022-08-22-231951_create_payments/: down.sql  up.sql
protos/orders/v1/: orders.proto
src/: db.rs  error_handler.rs  lib.rs  schema.rs
src/models/: auto_models.rs  mod.rs  orders.rs  payments.rs
src/services/: mod.rs
src/services/orders/: mod.rs  service.rs  utils.rs
