[package]
name = "landeed"
version = "0.1.0"
edition = "2021"

[lib]
name = "landeed"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4"] }
tonic = { version = "0.7.2", features = ["tls", "prost"] }
prost = "0.10.1"
prost-types = "0.10"
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread", "fs"] }
chrono = "0.4.19"
dotenv = "0.15.0"
uuid = { version = "1.0.0", features = ["v4"] }
console = "0.15.0"
diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = "2.0.0-rc.0"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
digest = { version = "0.10", features = ["mac"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.7.2"